--- a/api/template.yaml
+++ b/api/template.yaml
@@ -50,6 +50,22 @@ Resources:
       PathPart: "accounts"
       RestApiId: !Ref Api
 
+  AccountsDetailResource:
+    Type: AWS::ApiGateway::Resource
+    Properties:
+      ParentId: !Ref AccountsResource
+      PathPart: "{accountId}"
+      RestApiId: !Ref Api
+
+  AuthorizerFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: ./authorizer
+      FunctionName: "heart-authorizer"
+      Layers:
+        - arn:aws:lambda:ca-central-1:583168578067:layer:firebase-admin-layer:1
+      Role: !GetAtt LambdaExecutionRole.Arn
+
   ApiFunction:
     Type: AWS::Serverless::Function
     Properties:
@@ -65,6 +81,12 @@ Resources:
       LogGroupName: !Sub  "/aws/lambda/${ApiFunction}"
       RetentionInDays: !FindInMap [ Env, !Ref Env, LogRetention ]
 
+  AuthorizerFunctionLogGroup:
+    Type: AWS::Logs::LogGroup
+    Properties:
+      LogGroupName: !Sub  "/aws/lambda/${AuthorizerFunction}"
+      RetentionInDays: !FindInMap [ Env, !Ref Env, LogRetention ]
+
   LambdaPermission:
     Type: AWS::Lambda::Permission
     Properties:
@@ -75,14 +97,35 @@ Resources:
         - "arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${Api}/*"
         - Api: !Ref Api
 
+  AuthorizerPermission:
+    Type: AWS::Lambda::Permission
+    Properties:
+      FunctionName: !GetAtt AuthorizerFunction.Arn
+      Action: lambda:InvokeFunction
+      Principal: apigateway.amazonaws.com
+      SourceArn: !Sub
+        - "arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${Api}/*"
+        - Api: !Ref Api
+
+  Authorizer:
+    Type: AWS::ApiGateway::Authorizer
+    Properties:
+      AuthorizerUri: !Sub
+        - "arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${Function}/invocations"
+        - Function: !GetAtt AuthorizerFunction.Arn
+      IdentitySource: method.request.header.Authorization
+      Name: "main-authorizer"
+      RestApiId: !Ref Api
+      Type: REQUEST
+
   DeleteAccountMethod:
     Type: AWS::ApiGateway::Method
     Properties:
+      AuthorizerId: !Ref Authorizer
+      AuthorizationType: CUSTOM
       HttpMethod: DELETE
-      ResourceId:
-        Ref: AccountsResource
+      ResourceId: !Ref AccountsDetailResource
       RestApiId: !Ref Api
-      AuthorizationType: NONE
       OperationName: "delete-account"
       Integration:
         Type: AWS_PROXY
