--- a/media/template.yaml
+++ b/media/template.yaml
@@ -1,5 +1,30 @@
 AWSTemplateFormatVersion: "2010-09-09"
-Description: "App's general infrastructure"
+Description: "App's media resources"
+Transform: "AWS::Serverless-2016-10-31"
+
+
+Globals:
+  Function:
+    Runtime: python3.12
+    Handler: app.handler
+    Timeout: 7
+
+Parameters:
+  Env:
+    Type: String
+    AllowedValues:
+      - dev
+      - prod
+  UploadBucketName:
+    Type: String
+    Default: "upload"  # used in the bucket definition and to refer to it, to avoid cyclic dependencies
+
+Mappings:
+  Env:
+    dev:
+      LogRetention: 3 # days
+    prod:
+      LogRetention: 90 # days
 
 Resources:
   ExerciseBucket:
@@ -12,15 +37,45 @@ Resources:
         IgnorePublicAcls: true
         RestrictPublicBuckets: true
 
-  ExerciseBucketOriginAccessControl:
+  UserMediaBucket:
+    Type: AWS::S3::Bucket
+    Properties:
+      BucketName: !Sub "${AWS::AccountId}-user-media"
+      PublicAccessBlockConfiguration:
+        BlockPublicAcls: true
+        BlockPublicPolicy: true
+        IgnorePublicAcls: true
+        RestrictPublicBuckets: true
+
+  BucketOriginAccessControl:
     Type: AWS::CloudFront::OriginAccessControl
     Properties:
       OriginAccessControlConfig:
         Description: "OAC for exercise assets"
-        Name: "exercise-oac"
+        Name: "bucket-oac"
         OriginAccessControlOriginType: s3
         SigningBehavior: always
         SigningProtocol: sigv4
+
+  MediaCachePolicy:
+    Type: AWS::CloudFront::CachePolicy
+    Properties:
+      CachePolicyConfig:
+        Comment: "Copy of CachingOptimized policy, except it allows the 'v' query param"
+        DefaultTTL: 86400
+        MaxTTL: 31536000
+        MinTTL: 1
+        Name: "MediaCacheWithQuery"
+        ParametersInCacheKeyAndForwardedToOrigin:
+          EnableAcceptEncodingGzip: true
+          EnableAcceptEncodingBrotli: true
+          HeadersConfig:
+            HeaderBehavior: none
+          QueryStringsConfig:
+            QueryStringBehavior: whitelist
+            QueryStrings: [ "v" ]
+          CookiesConfig:
+            CookieBehavior: none
 
   MediaDistribution:
     Type: AWS::CloudFront::Distribution
@@ -29,11 +84,23 @@ Resources:
         Enabled: true
         Comment: "Heart of yours, media assets"
         CacheBehaviors:
-          -
-            PathPattern: "/exercises/*"
+          - PathPattern: "/exercises/*"
             TargetOriginId: ExerciseBucketOrigin
             ViewerProtocolPolicy: https-only
             CachePolicyId: 658327ea-f89d-4fab-a63d-7e88639e58f6  # CachingOptimized
+            AllowedMethods:
+              - GET
+              - HEAD
+            CachedMethods:
+              - GET
+              - HEAD
+            ForwardedValues:
+              QueryString: false
+          - PathPattern: "/avatars/*"
+            TargetOriginId: UserMediaBucketOrigin
+            ViewerProtocolPolicy: https-only
+            CachePolicyId: !Ref MediaCachePolicy
+            #            CachePolicyId: 658327ea-f89d-4fab-a63d-7e88639e58f6  # CachingOptimized
             AllowedMethods:
               - GET
               - HEAD
@@ -61,7 +128,13 @@ Resources:
               # empty, as per
               # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-cloudfront-distribution-s3originconfig.html#cfn-cloudfront-distribution-s3originconfig-originaccessidentity
               OriginAccessIdentity: ""
-            OriginAccessControlId: !Ref ExerciseBucketOriginAccessControl
+            OriginAccessControlId: !Ref BucketOriginAccessControl
+          - DomainName: !GetAtt UserMediaBucket.RegionalDomainName
+            Id: UserMediaBucketOrigin
+            OriginPath: ""
+            S3OriginConfig:
+              OriginAccessIdentity: ""
+            OriginAccessControlId: !Ref BucketOriginAccessControl
 
   ExerciseBucketPolicy:
     Type: AWS::S3::BucketPolicy
@@ -79,16 +152,115 @@ Resources:
               StringEquals:
                 AWS:SourceArn: !Sub "arn:aws:cloudfront::${AWS::AccountId}:distribution/${MediaDistribution}"
 
+  MediaBucketPolicy:
+    Type: AWS::S3::BucketPolicy
+    Properties:
+      Bucket: !Ref UserMediaBucket
+      PolicyDocument:
+        Statement:
+          - Sid: AllowCloudFrontServicePrincipal
+            Effect: Allow
+            Action: "s3:GetObject"
+            Resource: !Sub "${UserMediaBucket.Arn}/*"
+            Principal:
+              Service: "cloudfront.amazonaws.com"
+            Condition:
+              StringEquals:
+                AWS:SourceArn: !Sub "arn:aws:cloudfront::${AWS::AccountId}:distribution/${MediaDistribution}"
+
+  LambdaExecutionRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Action: sts:AssumeRole
+            Effect: Allow
+            Principal:
+              Service:
+                - lambda.amazonaws.com
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
+      Policies:
+        - PolicyName: "ApiPolicy"
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - s3:PutObject
+                  - s3:GetObject
+                  - s3:PutObjectTagging
+                  - s3:GetObjectTagging
+                Resource:
+                  - !Sub "arn:aws:s3:::${AWS::AccountId}-${UploadBucketName}/*"
+                  - !Sub "arn:aws:s3:::${UserMediaBucket}/*"
+
+  ImageConverterFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: ./process
+      Description: "Part of Heart API: processes uploaded images"
+      FunctionName: "heart-images"
+      Layers:
+        - !Sub "arn:aws:lambda:${AWS::Region}:770693421928:layer:Klayers-p312-Pillow:5"
+      MemorySize: 256
+      Role: !GetAtt LambdaExecutionRole.Arn
+
+  ImageConverterFunctionLogGroup:
+    Type: AWS::Logs::LogGroup
+    Properties:
+      LogGroupName: !Sub  "/aws/lambda/${ImageConverterFunction}"
+      RetentionInDays: !FindInMap [ Env, !Ref Env, LogRetention ]
+
+  S3Permission:
+    Type: AWS::Lambda::Permission
+    Properties:
+      FunctionName: !Ref ImageConverterFunction
+      Action: lambda:InvokeFunction
+      Principal: s3.amazonaws.com
+      SourceArn: !Sub "arn:aws:s3:::${AWS::AccountId}-${UploadBucketName}"
+
+  UploadBucket:
+    DependsOn: S3Permission
+    Type: AWS::S3::Bucket
+    Properties:
+      BucketName: !Sub "${AWS::AccountId}-${UploadBucketName}"
+      PublicAccessBlockConfiguration:
+        BlockPublicAcls: true
+        BlockPublicPolicy: true
+        IgnorePublicAcls: true
+        RestrictPublicBuckets: true
+      LifecycleConfiguration:
+        Rules:
+          - Id: delete-all-after-one-day
+            Status: Enabled
+            ExpirationInDays: 1
+      NotificationConfiguration:
+        LambdaConfigurations:
+          - Event: "s3:ObjectCreated:Post"
+            Filter:
+              S3Key:
+                Rules:
+                  - Name: prefix
+                    Value: "avatars/"
+            Function: !GetAtt ImageConverterFunction.Arn
 
 Outputs:
   ExerciseBucketName:
     Description: "Media assets for exercises"
     Value: !Ref ExerciseBucket
     Export:
-      Name: "ExerciseBucket"
+      Name: "exercise-bucket"
+
+  UserMediaBucket:
+    Description: "Bucket for various user media"
+    Value: !Ref UserMediaBucket
+    Export:
+      Name: "user-media-bucket"
 
   MediaDistributionDomainName:
     Description: "CloudFront distribution domain name"
     Value: !GetAtt MediaDistribution.DomainName
     Export:
-      Name: "MediaDistributionDomain"
+      Name: "media-distribution-domain"
